Update launch files to include `--enable-preview`